--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "format": "prettier --write .",
+    "prepare": "husky"
   },
   "jest": {
     "preset": "jest-expo"
@@ -46,6 +47,7 @@
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.5",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "prettier": "^3.3.3",
