signin persist in progress

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dG91Z2gtbWl0ZS04Ni5jbGVyay5hY2NvdW50cy5kZXYk
+DATABASE_URL=postgresql://maja_ryde_db_owner:KkvFH6t2xcrb@ep-blue-cell-a2cy2dtv.eu-central-1.aws.neon.tech/maja_ryde_db?sslmode=require
