--- a/app.json
+++ b/app.json
@@ -23,12 +23,16 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "expo-font"
+      [ "expo-router",
+      
+      {
+          "origin": "https://uber.dev/"
+        }],
+        "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
