zustand implement for state managemnt

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ DATABASE_URL=postgresql://maja_ryde_db_owner:KkvFH6t2xcrb@ep-blue-cell-a2cy2dtv.
 EXPO_PUBLIC_SERVER_URL=https://uber.com/
 
 EXPO_PUBLIC_GEOAPIFY_API_KEY=a48463e99b3c4f98be0f9cea1a7849a4
+
+EXPO_PUBLIC_GOOGLE_API_KEY=AIzaSyCWJ-SZKsc_v43aUbKHkZLyFyDZgEnOaUs
+
