--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "^14.0.1",
+    "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
