--- a/app.json
+++ b/app.json
@@ -27,12 +27,14 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      [ "expo-router",
-      
-      {
+      [
+        "expo-router",
+
+        {
           "origin": "https://uber.dev/"
-        }],
-        "expo-font"
+        }
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
