stripe success modal implemented

--- a/app.json
+++ b/app.json
@@ -29,7 +29,6 @@
     "plugins": [
       [
         "expo-router",
-
         {
           "origin": "https://uber.dev/"
         }
@@ -38,6 +37,11 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ef2825e6-74f7-49f8-b731-abdb75c17dbd"
+      }
     }
   }
 }
