--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "content",
+  "name": "majaryde",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -51,7 +51,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
     "stripe": "^16.11.0",
-    "zustand": "^4.5.5"
+    "zustand": "^4.5.5",
+    "expo-updates": "~0.25.25"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
