--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,9 @@
         "EXPO_PUBLIC_GEOAPIFY_API_KEY": "EXPO_PUBLIC_GEOAPIFY_API_KEY",
         "EXPO_PUBLIC_GOOGLE_API_KEY": "EXPO_PUBLIC_GOOGLE_API_KEY",
         "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY": "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY",
-        "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY"
+        "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY",
+        "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY",
+        "EXPO_PUBLIC_DEV_IOS_MAP_GOOGLE_API_KEY":"EXPO_PUBLIC_DEV_IOS_MAP_GOOGLE_API_KEY"
       },
       "channel": "development"
     },
