android unused code clean

--- a/eas.json
+++ b/eas.json
@@ -15,23 +15,26 @@
         "EXPO_PUBLIC_GOOGLE_API_KEY": "EXPO_PUBLIC_GOOGLE_API_KEY",
         "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY": "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY",
         "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY",
-        "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY",
-        "EXPO_PUBLIC_DEV_IOS_MAP_GOOGLE_API_KEY":"EXPO_PUBLIC_DEV_IOS_MAP_GOOGLE_API_KEY"
+        "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY"
       },
       "channel": "development"
     },
     "preview": {
+       "ios": {
+        "simulator": true
+      },
       "android": {
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
+       "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
         "DATABASE_URL": "DATABASE_URL",
         "EXPO_PUBLIC_SERVER_URL": "EXPO_PUBLIC_SERVER_URL",
         "EXPO_PUBLIC_GEOAPIFY_API_KEY": "EXPO_PUBLIC_GEOAPIFY_API_KEY",
         "EXPO_PUBLIC_GOOGLE_API_KEY": "EXPO_PUBLIC_GOOGLE_API_KEY",
         "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY": "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY",
-        "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY"
+        "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY",
+        "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY"
       },
       "channel": "development"
     },
