--- a/eas.json
+++ b/eas.json
@@ -27,7 +27,7 @@
         "buildType": "apk"
       },
       "env": {
-       "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
         "DATABASE_URL": "DATABASE_URL",
         "EXPO_PUBLIC_SERVER_URL": "EXPO_PUBLIC_SERVER_URL",
         "EXPO_PUBLIC_GEOAPIFY_API_KEY": "EXPO_PUBLIC_GEOAPIFY_API_KEY",
@@ -36,7 +36,7 @@
         "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY",
         "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY"
       },
-      "channel": "development"
+      "channel": "preview"
     },
     "preview2": {
       "android": {
