--- a/package.json
+++ b/package.json
@@ -11,29 +11,36 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "format": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "eas-build-on-success": "npx bugsnag-eas-build-on-success"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@bugsnag/expo": "^51.0.0",
     "@clerk/clerk-expo": "^2.2.5",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@neondatabase/serverless": "^0.9.5",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
     "@stripe/stripe-react-native": "^0.38.6",
     "dotenv": "^16.4.5",
     "expo": "~51.0.28",
+    "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.27",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "^14.0.1",
     "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
-    "expo-secure-store": "^13.0.2",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -58,6 +65,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@bugsnag/plugin-expo-eas-sourcemaps": "^51.0.0",
+    "@bugsnag/source-maps": "^2.3.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
