--- a/eas.json
+++ b/eas.json
@@ -15,7 +15,13 @@
         "EXPO_PUBLIC_GOOGLE_API_KEY": "EXPO_PUBLIC_GOOGLE_API_KEY",
         "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY": "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY",
         "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY",
-        "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY"
+        "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY",
+        "EXPO_PUBLIC_API_DRIVER":"EXPO_PUBLIC_API_DRIVER",
+"EXPO_PUBLIC_API_USER":"EXPO_PUBLIC_API_USER",
+"EXPO_PUBLIC_API_RIDE": "EXPO_PUBLIC_API_RIDE",
+"EXPO_PUBLIC_API_STRIPE_CREATE": "EXPO_PUBLIC_API_STRIPE_CREATE",
+"EXPO_PUBLIC_API_STRIPE_PAY": "EXPO_PUBLIC_API_STRIPE_PAY",
+"EXPO_PUBLIC_BUGSNAG_API_KEY": "EXPO_PUBLIC_BUGSNAG_API_KEY"
       },
       "channel": "development"
     },
@@ -34,7 +40,13 @@
         "EXPO_PUBLIC_GOOGLE_API_KEY": "EXPO_PUBLIC_GOOGLE_API_KEY",
         "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY": "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY",
         "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY",
-        "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY"
+        "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY",
+        "EXPO_PUBLIC_API_DRIVER":"EXPO_PUBLIC_API_DRIVER",
+"EXPO_PUBLIC_API_USER":"EXPO_PUBLIC_API_USER",
+"EXPO_PUBLIC_API_RIDE": "EXPO_PUBLIC_API_RIDE",
+"EXPO_PUBLIC_API_STRIPE_CREATE": "EXPO_PUBLIC_API_STRIPE_CREATE",
+"EXPO_PUBLIC_API_STRIPE_PAY": "EXPO_PUBLIC_API_STRIPE_PAY",
+"EXPO_PUBLIC_BUGSNAG_API_KEY": "EXPO_PUBLIC_BUGSNAG_API_KEY"
       },
       "channel": "preview"
     },
