--- a/eas.json
+++ b/eas.json
@@ -21,7 +21,8 @@
 "EXPO_PUBLIC_API_RIDE": "EXPO_PUBLIC_API_RIDE",
 "EXPO_PUBLIC_API_STRIPE_CREATE": "EXPO_PUBLIC_API_STRIPE_CREATE",
 "EXPO_PUBLIC_API_STRIPE_PAY": "EXPO_PUBLIC_API_STRIPE_PAY",
-"EXPO_PUBLIC_BUGSNAG_API_KEY": "EXPO_PUBLIC_BUGSNAG_API_KEY"
+"EXPO_PUBLIC_BUGSNAG_API_KEY": "EXPO_PUBLIC_BUGSNAG_API_KEY",
+"EXPO_PUBLIC_HOME_URL": "EXPO_PUBLIC_HOME_URL"
       },
       "channel": "development"
     },
@@ -46,7 +47,9 @@
 "EXPO_PUBLIC_API_RIDE": "EXPO_PUBLIC_API_RIDE",
 "EXPO_PUBLIC_API_STRIPE_CREATE": "EXPO_PUBLIC_API_STRIPE_CREATE",
 "EXPO_PUBLIC_API_STRIPE_PAY": "EXPO_PUBLIC_API_STRIPE_PAY",
-"EXPO_PUBLIC_BUGSNAG_API_KEY": "EXPO_PUBLIC_BUGSNAG_API_KEY"
+"EXPO_PUBLIC_BUGSNAG_API_KEY": "EXPO_PUBLIC_BUGSNAG_API_KEY",
+"EXPO_PUBLIC_HOME_URL": "EXPO_PUBLIC_HOME_URL"
+
       },
       "channel": "preview"
     },
