--- a/eas.json
+++ b/eas.json
@@ -16,11 +16,10 @@
         "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY": "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY",
         "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY",
         "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY",
-        "EXPO_PUBLIC_API_DRIVER":"EXPO_PUBLIC_API_DRIVER",
-"EXPO_PUBLIC_API_USER":"EXPO_PUBLIC_API_USER",
-"EXPO_PUBLIC_API_RIDE": "EXPO_PUBLIC_API_RIDE",
-"EXPO_PUBLIC_API_STRIPE_CREATE": "EXPO_PUBLIC_API_STRIPE_CREATE",
-"EXPO_PUBLIC_API_STRIPE_PAY": "EXPO_PUBLIC_API_STRIPE_PAY",
+        "EXPO_PUBLIC_API":"EXPO_PUBLIC_API",
+        "EXPO_PUBLIC_API_STRIPE": "EXPO_PUBLIC_API_STRIPE",
+        "EXPO_PUBLIC_LIVE_API": "EXPO_PUBLIC_LIVE_API",
+        "EXPO_PUBLIC_LIVE_API_STRIPE": "EXPO_PUBLIC_LIVE_API_STRIPE",
 "EXPO_PUBLIC_BUGSNAG_API_KEY": "EXPO_PUBLIC_BUGSNAG_API_KEY",
 "EXPO_PUBLIC_HOME_URL": "EXPO_PUBLIC_HOME_URL"
       },
@@ -42,11 +41,10 @@
         "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY": "EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY",
         "EXPO_STRIPE_SECRET_KEY": "EXPO_STRIPE_SECRET_KEY",
         "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY": "EXPO_PUBLIC_DEV_ANDROID_MAP_GOOGLE_API_KEY",
-        "EXPO_PUBLIC_API_DRIVER":"EXPO_PUBLIC_API_DRIVER",
-"EXPO_PUBLIC_API_USER":"EXPO_PUBLIC_API_USER",
-"EXPO_PUBLIC_API_RIDE": "EXPO_PUBLIC_API_RIDE",
-"EXPO_PUBLIC_API_STRIPE_CREATE": "EXPO_PUBLIC_API_STRIPE_CREATE",
-"EXPO_PUBLIC_API_STRIPE_PAY": "EXPO_PUBLIC_API_STRIPE_PAY",
+        "EXPO_PUBLIC_API":"EXPO_PUBLIC_API",
+        "EXPO_PUBLIC_API_STRIPE": "EXPO_PUBLIC_API_STRIPE",
+        "EXPO_PUBLIC_LIVE_API": "EXPO_PUBLIC_LIVE_API",
+        "EXPO_PUBLIC_LIVE_API_STRIPE": "EXPO_PUBLIC_LIVE_API_STRIPE",
 "EXPO_PUBLIC_BUGSNAG_API_KEY": "EXPO_PUBLIC_BUGSNAG_API_KEY",
 "EXPO_PUBLIC_HOME_URL": "EXPO_PUBLIC_HOME_URL"
 
