--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
-    "expo-linking": "~6.3.1",
     "expo-local-authentication": "^14.0.1",
     "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
@@ -61,7 +60,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
     "stripe": "^16.11.0",
-    "zustand": "^4.5.5"
+    "zustand": "^4.5.5",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
