--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@neondatabase/serverless": "^0.9.5",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
-    "@stripe/stripe-react-native": "^0.38.6",
+    "@stripe/stripe-react-native": "0.37.2",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.28",
+    "expo": "~51.0.37",
     "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.27",
+    "expo-dev-client": "~4.0.28",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
@@ -40,10 +40,10 @@
     "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.25",
+    "expo-updates": "~0.25.27",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -51,11 +51,11 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "^1.18.0",
+    "react-native-maps": "1.14.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
