--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "react-native-web": "~0.19.10",
     "stripe": "^16.11.0",
     "zustand": "^4.5.5",
-    "expo-linking": "~6.3.1"
+    "expo-linking": "~6.3.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-build-properties": "~0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
