--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "majaryde",
+  "name": "aceeryde",
   "main": "expo-router/entry",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -24,18 +24,21 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@neondatabase/serverless": "^0.9.5",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
     "@stripe/stripe-react-native": "0.37.2",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.37",
+    "expo": "~51.0.38",
     "expo-application": "~5.9.1",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-dev-client": "~4.0.28",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
+    "expo-linking": "~6.3.1",
     "expo-local-authentication": "^14.0.1",
     "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
@@ -60,10 +63,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
     "stripe": "^16.11.0",
-    "zustand": "^4.5.5",
-    "expo-linking": "~6.3.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-build-properties": "~0.12.5"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
